2024-01-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (ee-bol-skip-invisible, ee-eol-skip-invisible):
	fixed some typos.
	(find-git-intro): several changes.

2024-01-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (ee-bol-skip-invisible, ee-eol-skip-invisible): new
	functions.

	* eev-edit.el (ee-copy-this-line-to-kill-ring): use
	`ee-bol-skip-invisible' and `ee-eol-skip-invisible'.

	* eev-kla.el (ee-kl-line): use `ee-bol-skip-invisible' and
	`ee-eol-skip-invisible'.

2024-01-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kl-here-intro): new function.
	(find-git-intro): rewrote completely.

2023-12-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el (find-kl-debug-links): new function.
	(kl, kll, kls): call `find-kl-debug-links' when needed.

2023-12-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: rewritten completely.

	* eev-tlinks.el (find-linki-links): new function.

	* eev-kla.el (ee-kl-line): new function.

	* eev-htests.el: new file.
	(find-tlhs, find-tlhi): new functions.

2023-12-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-find-here-debug-links): rewritten.

	* eev-intro.el (find-here-links-intro): rewrote the section "8.
	Debugging"; wrote the sections "9. The hlang" and "9.1. A
	historical note".

	* eev-hlinks.el (ee-find-here-links0): renamed to
	`ee-find-here-links-header'.

2023-12-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2023replsb" (now) has subtitles.

2023-12-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an entry for
	"eev2023replsb".
	(find-eev2023replsbvideo): new function.

2023-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kl-here.el: added a provide.

	* eev-qrl.el: added a provide.

	* eev-intro.el (find-templates-intro): rewrote the section "5.
	Debugging the meat".

	* eev-qrl.el: new file.
