@@ -1,6 +1,6 @@
 ;;; eev-kla.el -- kill link to anchor and friends.  -*- lexical-binding: nil; -*-
 
-;; Copyright (C) 2022-2023 Free Software Foundation, Inc.
+;; Copyright (C) 2022-2024 Free Software Foundation, Inc.
 ;;
 ;; This file is part of GNU eev.
 ;;
