@@ -1,6 +1,6 @@
 ;;; eev-tlinks.el --- hyperlinks to temporary buffers generated by templates  -*- lexical-binding: nil; -*-
 
-;; Copyright (C) 2013-2023 Free Software Foundation, Inc.
+;; Copyright (C) 2013-2024 Free Software Foundation, Inc.
 ;;
 ;; This file is part of GNU eev.
 ;;
@@ -19,16 +19,16 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    20231223
+;; Version:    20240105
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://anggtwu.net/eev-current/eev-tlinks.el>
 ;;       htmlized: <http://anggtwu.net/eev-current/eev-tlinks.el.html>
 ;;       See also: <http://anggtwu.net/eev-current/eev-beginner.el.html>
 ;;                 <http://anggtwu.net/eev-intros/find-eev-intro.html>
-;;                 <http://anggtwu.net/eev-intros/find-links-intro.html>
+;;                 <http://anggtwu.net/eev-intros/find-links-conv-intro.html>
 ;;                                               (find-eev-intro)
-;;                                               (find-links-intro)
+;;                                               (find-links-conv-intro)
 
 ;;; Commentary:
 
@@ -166,6 +166,7 @@
 ;; «.find-maximamsg-links»		(to "find-maximamsg-links")
 ;; «.find-maximamsg»			(to "find-maximamsg")
 ;; «.find-linki-links»			(to "find-linki-links")
+;; «.find-gitdoc-links»			(to "find-gitdoc-links")
 
 
 (require 'eev-env)
@@ -4794,6 +4795,47 @@ A \"Maxima message\" is a message in the Maxima mailing list."
      )
    pos-spec-list))
 
+
+
+
+;; «find-gitdoc-links»  (to ".find-gitdoc-links")
+;; Skel: (find-find-links-links-new "gitdoc" "stem" "")
+;; Test: (find-gitdoc-links)
+;;
+(defun find-gitdoc-links (&optional stem &rest pos-spec-list)
+"Visit a temporary buffer containing hyperlinks for gitdoc."
+  (interactive)
+  (setq stem (or stem "{stem}"))
+  (apply
+   'find-elinks
+   `((find-gitdoc-links ,stem ,@pos-spec-list)
+     (find-gitdoc-links "branch")
+     ;; Convention: the first sexp always regenerates the buffer.
+     (find-efunction 'find-gitdoc-links)
+     ""
+     (find-git-intro)
+     (code-c-d "gitdoc" "/usr/share/doc/git-doc/")
+     ""
+     ,(ee-template0 "\
+# (find-gitdoc-links               \"{stem}\")
+# (find-es \"git\"               \"git-{stem}\")
+# (find-man                    \"git-{stem}\")
+# (find-man                  \"1 git-{stem}\")
+# (find-gitdocfile             \"git-{stem}.txt\")
+# (find-gitdocfile          \"\" \"git-{stem}.txt\")
+# file:///usr/share/doc/git-doc/git-{stem}.html
+# (find-sh                \"git help {stem}\")
+
+# (find-vldifile \"git-doc.list\")
+# (find-udfile   \"git-doc/\")
+# (find-gitdocfile \"\")
+# (find-gitdocfile \"\" \"gitcore-tutorial.txt\")
+# (find-gitdocfile \"\" \"gittutorial.txt\")
+# (find-gitdocfile \"\" \"revisions.txt\")
+# (find-gitdocfile \"revisions.txt\")
+")
+     )
+   pos-spec-list))
 
 
 
